force-app/main/default/objects/SAP_SD_Delivery__e/SAP_SD_Delivery__e.object-meta.xml
<CustomObject>
    <description>Platform Event triggered from SAP via API to communicate delivery events</description>
    <label>SAP SD Delivery</label>
    <pluralLabel>SAP SD Delivery</pluralLabel>
</CustomObject>