force-app/main/default/objects/SAP_SD_Delivery__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Values permitted: CREATE, STATUS (change of), GOODS-POSTED, DELETE</description>
    <inlineHelpText>Values permitted: CREATE, STATUS (change of), GOODS-POSTED, DELETE</inlineHelpText>
    <label>Action</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>