force-app/main/default/objects/SAP_SD_Delivery__e/fields/data__c.field-meta.xml
<CustomField>
    <fullName>data__c</fullName>
    <description>JSON con datos sontr la nota de entrega</description>
    <label>data</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>