force-app/main/default/objects/SAP_SD_Delivery__e/fields/DeliveryNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNumber__c</fullName>
    <label>SAP Delivery Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>