force-app/main/default/objects/SAP_SD_Delivery__e/fields/GoodsPosted__c.field-meta.xml
<CustomField>
    <fullName>GoodsPosted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the goods movement has been posted in SAP (and the stock has been updated)</description>
    <label>SAP Goods Posted</label>
    <type>Checkbox</type>
</CustomField>