force-app/main/default/objects/SAP_SD_Delivery__e/fields/IsCollection__c.field-meta.xml
<CustomField>
    <fullName>IsCollection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if it is a customer return</description>
    <label>Is Collection</label>
    <type>Checkbox</type>
</CustomField>