force-app/main/default/objects/SAP_SD_Delivery__e/fields/IsSample__c.field-meta.xml
<CustomField>
    <fullName>IsSample__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if it is the delivery of a samples order</description>
    <label>Is Sample</label>
    <type>Checkbox</type>
</CustomField>