force-app/main/default/objects/SAP_SD_Delivery__e/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <label>SAP Order Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>