force-app/main/default/objects/SAP_SD_Delivery__e/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <label>Sales Organisation</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>