force-app/main/default/objects/SAP_SD_Delivery__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>3</length>
    <type>Text</type>
</CustomField>